--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "mongodb/mongodb": "^1.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2",
+        "phpunit/phpunit": "^4.0",
+        "phpunit/dbunit": "^2.0.2",
+        "phpunit/php-invoker": "^1.1.4",
         "behat/behat": "^3.0.15",
         "phpunit/phpunit-selenium": "1.4.2",
         "phpmd/phpmd" : "@stable",
@@ -16,7 +18,7 @@
     "authors": [
         {
             "name": "Antonio Mendes",
-            "email": "avmdausa@gmail.com"
+            "email": "webahoicson@gmail.com"
         }
     ],
     "minimum-stability": "dev"
